hopital restructuration version 1

--- a/header.html
+++ b/header.html
@@ -18,10 +18,10 @@
                     PARTIE II
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="/partie2/views/exo1_createPatient.php">Inscriptions</a>
-                    <a class="dropdown-item" href="/partie2/views/exo5_createAppointment.php">Prendre rendez-vous</a>
-                     <a class="dropdown-item" href="/partie2/views/exo10_deleteAppointment.php">Liste des rendez-vous et suppression</a>
-                     <a class="dropdown-item" href="/partie2/views/exo11_deletePatient.php">Liste des patients et suppression</a>
+                    <a class="dropdown-item" href="/partie2/views/exo01_createPatient.php">Inscriptions</a>
+                     <a class="dropdown-item" href="/partie2/views/exo02_getPatientList.php">Liste des patients</a>
+                    <a class="dropdown-item" href="/partie2/views/exo05_createAppointment.php">Prendre rendez-vous</a>
+                     <a class="dropdown-item" href="/partie2/views/exo06_getAppointmentList.php">Liste des rendez-vous</a>
                      
                 </div>
             </li>
