--- a/header.html
+++ b/header.html
@@ -19,7 +19,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="/partie2/views/exo01_createPatient.php">Inscriptions</a>
-                     <a class="dropdown-item" href="/partie2/views/exo02_getPatientList.php">Liste des patients</a>
+                     <a class="dropdown-item" href="/partie2/views/exo02_getPatientList.php?page=1">Liste des patients</a>
                     <a class="dropdown-item" href="/partie2/views/exo05_createAppointment.php">Prendre rendez-vous</a>
                      <a class="dropdown-item" href="/partie2/views/exo06_getAppointmentList.php">Liste des rendez-vous</a>
                      
